# kinorganizer

./: .env  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  Rocket.toml  tailwind.config.js
entity/: Cargo.toml
entity/src/: event.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  entity.rs  film.rs  jfk_event.rs  main.rs  tmdb.rs
src/entity/: event.rs  film.rs
src/migration/: m20220101_000001_create_table.rs
static/css/: app.css  style.css
static/js/: darkmode.js  script.js
templates/: base.html  base.html.tera  event.html  event.html.tera  film.html.hbs  index.html  index.html.tera  new_event.html  new_event.html.tera  tmdb_search_results.html.tera
