[package]
name = "jfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
# rocket_db_pools = {version = "0.1.0", features = ["sqlx_sqlite"]}
sqlx = {version="0.7", default_features=false, features = ["macros", "migrate"]}
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-rocket = "0.5"
# letterboxd = "0.3.1"
serde = {version = "1.0", features = ["derive"]}
tmdb-api = "0.5.2"
