[package]
name = "jfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dotenv = "0.15"
sqlx = { version = "0.7", default_features = false, features = [
  "macros",
  "migrate",
] }
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "0.12", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
# letterboxd = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", default-features = false }
tokio = { version = "1.35", features = ["full"] }
tmdb-api = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
